@@ -1,3 +1,9 @@
+2006-06-23  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* autogen.sh:
+	  Find newer automake/autoconf versions and use those if
+	  available.
+
 2006-05-24  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
 	* src/gnet-private.h:
